# ragas_experimental

./: .gitignore  CNAME  README.md  dataset.html  dataset.html.md  exceptions.html  experiment.html  index.html  init_module.html  init_module.md  pyproject.toml  search.json  settings.ini  sitemap.xml  typing.html  typing.html.md  utils.html
.github/workflows/: test.yaml
backends/: factory.html  ragas_api_client.html  ragas_api_client.html.md
embedding/: base.html
llm/: llm.html
metric/: base.html  decorator.html  discrete.html  numeric.html  ranking.html  result.html
model/: pydantic_mode.html
nbs/: dataset.ipynb  exceptions.ipynb  experiment.ipynb  index.ipynb  init_module.ipynb  nbdev.yml  ragas_api_client.ipynb  sidebar.yml  typing.ipynb  utils.ipynb
nbs/backends/: factory.ipynb  mock_notion_client.ipynb  notion.ipynb  ragas_api_client.ipynb
nbs/embedding/: base.ipynb
nbs/llm/: llm.ipynb
nbs/metric/: base.ipynb  decorator.ipynb  discrete.ipynb  llm.ipynb  numeric.ipynb  ranking.ipynb  result.ipynb  test_base.ipynb
nbs/model/: new_notion_model.ipynb  notion_model.ipynb  notion_types.ipynb  pydantic_mode.ipynb
nbs/project/: 01_core.ipynb  core.ipynb  (+6 more)
project/: core.html  experiments.html  experiments.html.md  naming.html
prompt/: base.html  base.md  dynamic_few_shot.html  dynamic_few_shot.html.md
ragas_annotator/: __init__.py  _modidx.py  dataset.py  experiment.py  project.py  typing.py  utils.py
ragas_experimental/: __init__.py  _modidx.py  dataset.py  exceptions.py  experiment.py  typing.py  utils.py
tracing/: langfuse.html  mlflow.html
(+32 files in other folders)
